--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
 			<version>2.2.0.RELEASE</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.15</version>
@@ -52,7 +57,7 @@
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>jquery</artifactId>
-			<version>2.1.1</version>
+			<version>3.1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
